# Ai-Systems-New

./: build.gradle.kts  run.sh  settings.gradle.kts
ai_gguf/: build.gradle.kts  changes.md  proguard-rules.pro
ai_gguf/src/main/cpp/: CMakeLists.txt
ai_gguf/src/main/cpp/src/: ai_gguf.cpp
ai_gguf/src/main/cpp/src/chat/: chat_template.cpp  chat_template.h
ai_gguf/src/main/cpp/src/state/: embedding_state.cpp  embedding_state.h  model_state.cpp  model_state.h
ai_gguf/src/main/cpp/src/tool_calling/: tool_call_state.cpp  tool_call_state.h
ai_gguf/src/main/cpp/src/utils/: jni_utils.cpp  jni_utils.h  utf8_utils.cpp  utf8_utils.h
ai_gguf/src/main/java/com/mp/ai_gguf/: GGUFNativeLib.kt
ai_gguf/src/main/java/com/mp/ai_gguf/models/: EmbeddingCallback.kt  StreamCallback.kt
ai_gguf/src/main/java/com/mp/ai_gguf/toolcalling/: ToolCallManager.kt  ToolDefinition.kt
ai_mnn/: build.gradle.kts
ai_mnn/src/androidTest/java/com/dark/ai_mnn/: ExampleInstrumentedTest.kt
ai_mnn/src/main/cpp/: CMakeLists.txt  ai_mnn.cpp  llm_session.cpp
ai_mnn/src/main/java/com/dark/ai_mnn/: AudioDataListener.kt  GenerateProgressListener.kt  NativeMNNChat.kt
ai_mnn/src/test/java/com/dark/ai_mnn/: ExampleUnitTest.kt
ai_sd/: PLAN.MD  build.gradle.kts  run.sh
ai_sd/src/androidTest/java/com/dark/ai_sd/: ExampleInstrumentedTest.kt
ai_sd/src/main/cpp/: CMakeLists.txt  CMakePresets.json
ai_sd/src/main/cpp/src/: main.cpp
ai_sd/src/main/java/com/dark/ai_sd/: DiffusionManager.kt  DiffusionModelConfig.kt  GenerationManager.kt  ModelConfig.kt  NativeLibStableDiffusion.kt  StableDiffusionManager.kt  util.kt
ai_sd/src/test/java/com/dark/ai_sd/: ExampleUnitTest.kt
ai_supertonic_tts/: TTS_SDK_DOCS.md  build.gradle.kts  consumer-rules.pro
ai_supertonic_tts/src/androidTest/java/com/mp/ai_supertonic_tts/: ExampleInstrumentedTest.kt
ai_supertonic_tts/src/main/cpp/: CMakeLists.txt
ai_supertonic_tts/src/main/cpp/src/: supertonic_jni.cpp
ai_supertonic_tts/src/main/cpp/src/audio/: wav_encoder.cpp  wav_encoder.h
ai_supertonic_tts/src/main/cpp/src/utils/: logger.h
ai_supertonic_tts/src/main/java/com/mp/ai_supertonic_tts/: SupertonicNativeLib.kt  SupertonicTTS.kt
ai_supertonic_tts/src/main/java/com/mp/ai_supertonic_tts/audio/: AudioPlayer.kt  AudioSaver.kt
ai_supertonic_tts/src/main/java/com/mp/ai_supertonic_tts/callback/: TTSCallback.kt
ai_supertonic_tts/src/main/java/com/mp/ai_supertonic_tts/engine/: TTSEngine.kt  TextChunker.kt  TextProcessor.kt
ai_supertonic_tts/src/main/java/com/mp/ai_supertonic_tts/models/: AudioFormat.kt  SynthesisResult.kt  TTSConfig.kt  VoiceStyle.kt
ai_supertonic_tts/src/test/java/com/mp/ai_supertonic_tts/: ExampleUnitTest.kt
app/: build.gradle.kts
app/src/androidTest/java/com/mp/ai_systems/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/mp/ai_systems/: MainActivity.kt  ToolCallingActivity.kt
app/src/main/java/com/mp/ai_systems/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/mp/ai_systems/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
